# ESP-IDF-InkPlate

./: CMakeLists.txt  CMakeLists.txt.old  CMakeLists.txt.old2
include/drivers/: eink.hpp  eink_6.hpp  inkplate_platform.hpp  mcp23017.hpp
include/services/: esp.hpp
src/drivers/: eink.cpp
src/graphical/: image_bmp.cpp.disabled  pngle.cpp.disabled
src/minimal/: inkplate_minimal_test.cpp  inkplate_platform_min.cpp
src/services/: network_client.cpp.disabled
